--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 
 
     //UI
@@ -74,6 +72,16 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
 
 
+
+    //TEST
+
+    implementation "androidx.test:core:1.4.0"
+    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+    androidTestImplementation "com.google.truth:truth:1.0.1"
 
 
 }
