--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.InstantNews"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.InstantNews">
         <activity
             android:name=".ui.ArticleDetailsActivity"
             android:exported="false" />
